ChangeLog -- Summary of changes to the WHIZARD package

Use svn log to see detailed changes.

	Version 2.4.1

	
2016-12-31
	RELEASE: version 2.4.1

2016-12-02
	Alpha version of RECOLA interface
	Bugfix for generator status in LCIO
	
##################################################################
	
2016-11-28
	RELEASE: version 2.4.0

2016-11-24
	Bugfix for OpenLoops interface: EW scheme
	   is set by WHIZARD
	Bugfixes for top threshold implementation
	
2016-11-11
	Refactoring of dispatching
	
2016-10-18
	Bug fix for LCIO output

2016-10-10
	First implementation for collinear soft terms
	
2016-10-06
	First full WHIZARD models from UFO files
	
2016-10-05
	WHIZARD does not support legacy gcc 4.7.4 any longer

2016-09-30
	Major refactoring of process core and NLO components
	
2016-09-23
	WHIZARD homogeneous entity: discarding subconfigures
	  for CIRCE1/2, O'Mega, VAMP subpackages; these are
	  reconstructable by script projectors
	
2016-09-06
	Introduce main configure summary
	
2016-08-26
	Fix memory leak in event generation
	
##################################################################
	
2016-08-25
	RELEASE: version 2.3.1

2016-08-19
	Bug fix for EW-scheme dependence of gluino propagators

2016-08-01
	Beta version of complex mass scheme support

2016-07-26
	Fix bug in POWHEG damping for the matching

##################################################################

2016-07-21
	RELEASE: version 2.3.0

2016-07-20
	UFO file support (alpha version) in O'Mega

2016-07-13
	New (more) stable of WHIZARD GUI
	Support for EW schemes for OpenLoops
	Factorized NLO top decays for threshold model

2016-06-15
	Passing factorization scale to PYTHIA6
	Adding charge and neutral observables

2016-06-14
	Correcting angular distribution/tweaked kinematics in
	   non-collinear structure functions splittings

2016-05-10
	Include (Fortran) TAUOLA/PHOTOS for tau decays via PYTHIA6
	   (backwards validation of LC CDR/TDR samples)

2016-04-27