@@ -90,6 +90,7 @@ Output from running lcio_2_rd:
  parameter crossSectionError [float]: 4.64628, 
  parameter scale [float]: 998.962, 
  parameter BeamSpectrum [string]: , 
+ parameter processName [string]: lcio_2_p, 
 
  collection name : MCParticle
  parameters: 
