@@ -93,6 +93,7 @@ Output from running lcio_3_rd:
  parameter crossSectionError [float]: 8.96867, 
  parameter scale [float]: 500, 
  parameter BeamSpectrum [string]: , 
+ parameter processName [string]: lcio_3_p, 
 
  collection name : MCParticle
  parameters: 
