@@ -96,6 +96,7 @@ Output from running lcio_4_rd:
  parameter crossSectionError [float]: 9.68695, 
  parameter scale [float]: 457.78, 
  parameter BeamSpectrum [string]: CIRCE2: ilc500.circe, 
+ parameter processName [string]: lcio_4_p, 
 
  collection name : MCParticle
  parameters: 
