@@ -588,6 +588,8 @@ Select internal parameters
   procedure (generic_event_get_sqrts), deferred :: get_sqrts
   procedure (generic_event_get_polarization), deferred :: get_polarization
   procedure (generic_event_get_beam_file), deferred :: get_beam_file
+  procedure (generic_event_get_process_name), deferred :: &
+       get_process_name
 <<Event base: interfaces>>=
   abstract interface
      function generic_event_get_index (event) result (index)
@@ -635,6 +637,14 @@ Select internal parameters
        class(generic_event_t), intent(in) :: event
        type(string_t) :: file
      end function generic_event_get_beam_file
+  end interface
+  
+  abstract interface
+     function generic_event_get_process_name (event) result (name)
+       import
+       class(generic_event_t), intent(in) :: event
+       type(string_t) :: name
+     end function generic_event_get_process_name
   end interface  
 
 @ %def generic_event_get_index
@@ -643,6 +653,7 @@ Select internal parameters
 @ %def generic_event_get_sqrts
 @ %def generic_event_get_polarization
 @ %def generic_event_get_beam_file
+@ %def generic_event_get_process_name
 @ Set data used by external event formats.
 <<Event base: generic event: TBP>>=
   procedure (generic_event_set_alpha_qcd_forced), deferred :: &
@@ -9094,10 +9105,17 @@ The Fortran version has initializer form.
        type(c_ptr), value :: evt_obj
        character(len=1, kind=c_char), dimension(*), intent(in) :: file  
      end subroutine lcio_set_beam_file
+  end interface
+  interface 
+     subroutine lcio_set_process_name (evt_obj, name) bind(C)
+       import
+       type(c_ptr), value :: evt_obj
+       character(len=1, kind=c_char), dimension(*), intent(in) :: name
+     end subroutine lcio_set_process_name
   end interface  
 @ %def lcio_set_alpha_qcd lcio_set_scale lcio_set_sqrts
 @ %def lcio_set_xsec lcio_set_beam lcio_set_pol
-@ %def lcio_set_beam_file
+@ %def lcio_set_beam_file lcio_set_process_name
 @
 <<LCIO interface: public>>=
   public :: lcio_event_set_alpha_qcd
@@ -9179,6 +9197,18 @@ The Fortran version has initializer form.
   end subroutine lcio_event_set_beam_file
 
 @ %def lcio_event_set_beam_file
+@
+<<LCIO interface: public>>=
+  public :: lcio_event_set_process_name
+<<LCIO interface: procedures>>=
+  subroutine lcio_event_set_process_name (evt, name) 
+    type(lcio_event_t), intent(inout) :: evt
+    type(string_t), intent(in) :: name
+    call lcio_set_process_name (evt%obj, &
+         char (name) // c_null_char)
+  end subroutine lcio_event_set_process_name
+
+@ %def lcio_event_set_process_name
 @
 <<LCIO interface: interfaces>>=
   interface
@@ -15159,6 +15189,8 @@ event files.
             event%get_polarization ())
        call lcio_event_set_beam_file (eio%lcio_event, &
             event%get_beam_file ())
+       call lcio_event_set_process_name (eio%lcio_event, &
+            event%get_process_name ())
        call lcio_event_write (eio%lcio_writer, eio%lcio_event)
        call lcio_event_final (eio%lcio_event)
     else
