@@ -12934,7 +12934,7 @@ term instance.
   end function process_instance_get_polarization
 
 @ %def process_instance_get_polarization
-@ Get the beam spectrum file
+@ Get the beam spectrum 
 <<Instances: process instance: TBP>>=
   procedure :: get_beam_file => process_instance_get_beam_file
 <<Instances: procedures>>=
@@ -12945,6 +12945,17 @@ term instance.
   end function process_instance_get_beam_file
 
 @ %def process_instance_get_beam_file
+@ Get the process name
+<<Instances: process instance: TBP>>=
+  procedure :: get_process_name => process_instance_get_process_name
+<<Instances: procedures>>=
+  function process_instance_get_process_name (instance) result (name)
+    class(process_instance_t), intent(in) :: instance
+    type(string_t) :: name
+    name = instance%process%get_id ()
+  end function process_instance_get_process_name
+  
+@ %def process_instance_get_process_name
 @
 \subsubsection{Particle sets}
 Here we provide two procedures that convert the process instance
