@@ -7096,6 +7096,7 @@ and squared matrix element.
   procedure :: get_sqrts => event_get_sqrts
   procedure :: get_polarization => event_get_polarization
   procedure :: get_beam_file => event_get_beam_file
+  procedure :: get_process_name => event_get_process_name
 <<Events: procedures>>=
   function event_get_index (event) result (index)
     class(event_t), intent(in) :: event
@@ -7132,6 +7133,12 @@ and squared matrix element.
     type(string_t) :: file
     file = event%instance%get_beam_file ()
   end function event_get_beam_file 
+  
+  function event_get_process_name (event) result (name)
+    class(event_t), intent(in) :: event
+    type(string_t) :: name
+    name = event%instance%get_process_name ()
+  end function event_get_process_name
 
 @ %def event_get_index
 @ %def event_get_fac_scale
@@ -7139,6 +7146,7 @@ and squared matrix element.
 @ %def event_get_sqrts
 @ %def event_get_polarization
 @ %def event_get_beam_file
+@ %def event_get_process_name
 @ Return the actual number of calls, as stored in the process instance.
 <<Events: event: TBP>>=
   procedure :: get_actual_calls_total => event_get_actual_calls_total
