@@ -8,6 +8,9 @@ Use svn log to see detailed changes.
 2016-12-31
 	RELEASE: version 2.4.1
 
+2016-12-09
+	LCIO event header information added
+
 2016-12-02
 	Alpha version of RECOLA interface
 	Bugfix for generator status in LCIO
